--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.5.0
 pandas==1.5.3
-pandas-datareader==0.10.0
-numpy==1.21.4
-plotly==5.3.1
-yfinance==0.1.64
-
+numpy==1.21.2
+datetime==4.3
+yfinance==0.1.63
+streamlit==1.3.0
+plotly==6.0.0
