--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.5.0
 pandas==1.3.4
-numpy==1.21.4
-plotly==5.3.1
+numpy==1.21.2
+requests==2.26.0
 yfinance==0.1.64
+streamlit==1.21.0
+plotly==5.5.0
