--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas==1.3.4
-numpy==1.21.2
-yfinance==0.2.54
-streamlit==1.21.0
-plotly==5.5.0
-ta==0.10.2
-altair==4.1.0
-requests==2.26.0
-openpyxl==3.0.9
+pandas
+numpy
+yfinance
+streamlit
+plotly
+ta
+altair
+requests
+openpyxl
 
