--- a/.github/workflows/daily_screener.yml
+++ b/.github/workflows/daily_screener.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Runs at 19:00, 20:00, 21:00 UTC (Covers 2pm-5pm EST/EDT)
     - cron: '0 19,20,21 * * 1-5'
-  
+    - cron: '0 0 * * 1-5'
   # Allows you to run it manually from the "Actions" tab for testing
   workflow_dispatch:
 
