--- a/.github/workflows/daily_screener.yml
+++ b/.github/workflows/daily_screener.yml
@@ -2,8 +2,9 @@ name: Daily Strategy Scan
 
 on:
   schedule:
-    # Runs at 19:00, 20:00, 21:00 UTC (Covers 2pm-5pm EST/EDT)
-    - cron: '13 19,20,21,22,23 * * 1-5'
+    # Added '10' for 5am EST.
+    # Runs at 10:13 UTC (5:13am EST) and 19:13-23:13 UTC (2:13pm-6:13pm EST)
+    - cron: '13 10,19,20,21,22,23 * * 1-5'
   # Allows you to run it manually from the "Actions" tab for testing
   workflow_dispatch:
 
