--- a/.github/workflows/daily_screener.yml
+++ b/.github/workflows/daily_screener.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Added '10' for 5am EST.
     # Runs at 10:13 UTC (5:13am EST) and 19:13-23:13 UTC (2:13pm-6:13pm EST)
-    - cron: '13 10,19,20,21,22,23 * * 1-5'
+    - cron: '13 10,19,20,21, * * 1-5'
   # Allows you to run it manually from the "Actions" tab for testing
   workflow_dispatch:
 
